welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code

    
override def run() {
  
def faireV (c:color)
{ 
  avance();
  setCouleurBrosse(c);
  baisseBrosse();
  leveBrosse();
  avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
  recule();
  droite();
  avance();
    baisseBrosse();
  leveBrosse();
    avance();
		}
  
for (i <-0 to 2)
  {for(i <-0 to 2)
  {for(i <-0 to 3)
{faireV(c); 
 gauche();}
   avance(5);}
  gauche();
  avance(5)
  gauche();
  avance(5);}
}